--- a/index.html
+++ b/index.html
@@ -1,70 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
-    <link rel="manifest" href="./img/site.webmanifest">
-    <title>Pokédex</title>
+    <meta http-equiv="refresh" content="0; URL='./dex/"/>
+    <title>Redirect</title>
 </head>
-<body>
-    <h1 class="title">Pokédex</h1>
-    <div class="options">
-        <div>
-            <label for="optGen">Sort by:</label>
-            <select id="optGen">
-                <option value="0" disabled selected>Any Generation</option>
-                <option value="1">Gen I</option>
-                <option value="2">Gen II</option>
-                <option value="3">Gen III</option>
-                <option value="4">Gen IV</option>
-                <option value="5">Gen V</option>
-                <option value="6">Gen VI</option>
-                <option value="7">Gen VII</option>
-                <option value="8">Gen VIII</option>
-                <option value="9">Gen IX</option>
-            </select>
-            <label for="optType">or</label>
-            <select id="optType">
-                <option value="0" disabled selected>Any Type</option>
-                <option value="1">Normal</option>
-                <option value="2">Fighting</option>
-                <option value="3">Flying</option>
-                <option value="4">Poison</option>
-                <option value="5">Ground</option>
-                <option value="6">Rock</option>
-                <option value="7">Bug</option>
-                <option value="8">Ghost</option>
-                <option value="9">Steel</option>
-                <option value="10">Fire</option>
-                <option value="11">Water</option>
-                <option value="12">Grass</option>
-                <option value="13">Electric</option>
-                <option value="14">Psychic</option>
-                <option value="15">Ice</option>
-                <option value="16">Dragon</option>
-                <option value="17">Dark</option>
-                <option value="18">Fairy</option>
-            </select>
-        </div>
-        <span class="total"></span>
-        <div class="radio" id="optForm">
-            <input type="radio" name="rarity[]" value="default" checked>
-            <label for="form1">Normal</label>
-            <input type="radio" name="rarity[]" value="shiny">
-            <label for="form2">Shiny</label>
-        </div>
-        <div class="radio" id="optView">
-            <input type="radio" name="style[]" value="gif" checked>
-            <label for="ord1">Animated</label>
-            <input type="radio" name="style[]" value="png">
-            <label for="ord2">Static</label>
-        </div>
-    </div>
-    <div class="container"></div>
-</body>
+<body></body>
 </html>
-<script src="main.js"></script>
