--- a/dex/index.html
+++ b/dex/index.html
@@ -9,6 +9,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
     <link rel="manifest" href="./img/site.webmanifest">
     <title>Pokédex</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+    </style>
 </head>
 <body>
     <div class="header">
