--- a/dex/index.html
+++ b/dex/index.html
@@ -63,13 +63,12 @@
                 </select>
             </div>
             <span class="total"></span>
-            <div class="radio" id="optView">
-                <input type="checkbox" id="sprite" name="sprite" value="gif" checked>
-                <label for="sprite">Animated</label>
-            </div>
-            <div class="radio" id="optForm">
-                <input type="checkbox" id="rarity" name="rarity" value="shiny">
-                <label for="rarity">Shiny</label>
+            <div id="sprites" class="radio">
+                <label for="sprites">Sprites:</label>
+                <input type="checkbox" id="optView" name="sprite" value="animated" checked>
+                <label for="optView">Animated</label>
+                <input type="checkbox" id="optForm" name="rarity" value="shiny">
+                <label for="optForm">Shiny</label>
             </div>
         </div>
     </div>
