--- a/dex/index.html
+++ b/dex/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <meta name="description" content="A new way to filter Pokémon.">
+    <title>Dex.JS - Modern Pokédex</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
     <!-- <link rel="manifest" href="./img/site.webmanifest"> -->
-    <title>Dex.JS - Modern Pokédex</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
     </style>
@@ -20,8 +21,8 @@
             <div>
                 <label for="optGen">Sort by:</label>
                 <select id="optGen">
-                    <option value="0" disabled>Any Generation</option>
-                    <option value="1" selected>Generation I</option>
+                    <option value="0" disabled selected>Any Generation</option>
+                    <option value="1">Generation I</option>
                     <option value="2">Generation II</option>
                     <option value="3">Generation III</option>
                     <option value="4">Generation IV</option>
